[package]
name = "solana-chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-candlestick-chart = "0.4.1"
reqwest = {version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196",features = ["derive"] }

